project('numeronesoft-backgrounds-cornetti')
install_data('IMG_20210122_072511.jpg', 'PXL_20210203_062724678.jpg',
'IMG_20210122_072519_652.jpg', 'PXL_20210209_185400045.jpg',
'IMG_20210127_072322_345.jpg', 'PXL_20210211_061050978.jpg',
'IMG_20210129_074513_650.jpg', 'PXL_20210212_060945377.jpg',
'IMG_20210130_065128_584.jpg', 'PXL_20210220_062333748.jpg',
'IMG_20210130_065326_413.jpg', 'PXL_20210221_070752865.jpg',
'IMG_20210130_065446_145.jpg', 'PXL_20210222_061639148.jpg',
'IMG_20210130_113135_644.jpg', 'PXL_20210225_095405901.jpg',
'IMG_20210130_113159_978.jpg', 'PXL_20210225_141901361.jpg',
'IMG_20210130_113220_893.jpg', 'PXL_20210226_101317204.MP.jpg',
'IMG_20210130_113243_882.jpg', 'PXL_20210226_103319313.jpg',
'IMG_20210201_073734_970.jpg', 'PXL_20210228_205438610.MP.jpg',
'IMG_20210201_204543_644.jpg', 'PXL_20210301_062537270.MP.jpg',
'IMG_20210201_205100_555.jpg', 'PXL_20210302_102051444.MP.jpg',
'IMG_20210202_071658_450.jpg', 'PXL_20210302_102054822.MP.jpg', 'PXL_20210302_102056849.MP.jpg',
'IMG_20210202_080239_901.jpg', 'PXL_20210303_064029880.MP.jpg',
'IMG_20210202_175130_669.jpg', 'PXL_20210303_194723376.jpg',
'IMG_20210203_064510_244.jpg', 'PXL_20210304_103343904.MP.jpg',
'IMG_20210203_072801_004.jpg', 'PXL_20210304_103349002.MP.jpg', 'PXL_20210305_230319930.jpg',
'IMG_20210204_072610_236.jpg', 'PXL_20210309_063520793.MP.jpg',
'IMG_20210204_135554_325.jpg', 'PXL_20210309_063525910.jpg', 'PXL_20210309_064056897.MP.jpg',
'IMG_20210205_070657_385.jpg', 'PXL_20210311_061301053.jpg',
'IMG_20210206_121135_789.jpg', 'PXL_20210313_040511216.jpg', 'PXL_20210313_062042888.jpg',
'IMG_20210209_073033_045.jpg', 'PXL_20210313_062739879.MP.jpg', 'PXL_20210314_062655253.jpg',
'IMG_20210210_070721_946.jpg', 'PXL_20210320_103651226.jpg',
'IMG_20210211_071319_467.jpg', 'PXL_20210320_103701682.MP.jpg',
'IMG_20210212_071033_560.jpg', 'PXL_20210321_104153007.jpg',
'IMG_20210213_072933_251.jpg', 'PXL_20210327_194608233.jpg',
'IMG-20210218-WA0001.jpeg', 'PXL_20210331_220721162.jpg',
'IMG_20210221_081039_611.jpg', 'PXL_20210409_051349482.MP.jpg',
'IMG_20210222_071743_030.jpg', 'PXL_20210410_050834800.jpg',
'IMG_20210224_072834_005.jpg', 'PXL_20210411_053922116.jpg', 'PXL_20210412_051350243.jpg',
'IMG_20210225_073814_886.jpg', 'PXL_20210413_052206701.jpg',
'IMG_20210226_112119_161.jpg', 'PXL_20210414_050917821.jpg',
'IMG_20210301_072617_124.jpg', 'PXL_20210415_200119063.PANO.jpg',
'IMG_20210302_112232_636.jpg', 'PXL_20210419_092324096.jpg',
'IMG_20210303_074110_662.jpg', 'PXL_20210419_170302572.jpg',
'IMG_20210304_113430_477.jpg', 'PXL_20210419_171357390.jpg',
'IMG_20210306_062724_169.jpg', 'PXL_20210421_085754848.jpg',
'IMG_20210308_072344_210.jpg', 'PXL_20210423_101257088.jpg',
'IMG_20210309_073548_307.jpg', 'PXL_20210502_104624488.jpg',
'IMG_20210311_071400_713.jpg', 'PXL_20210502_104857412.jpg', 'PXL_20210502_170107672.PHOTOSPHERE.jpg',
'IMG_20210312_072836_002.jpg', 'PXL_20210503_085240206.PHOTOSPHERE.jpg',
'IMG_20210313_072158_206.jpg', 'PXL_20210503_090224496.PANO.jpg',
'IMG_20210314_072732_492.jpg', 'PXL_20210503_090258774.PANO.jpg',
'IMG_20210409_071642_793.jpg', 'PXL_20210503_090323017.PANO.jpg',
'IMG_20210410_070952_112.jpg', 'PXL_20210503_090953388.jpg',
'IMG_20210411_073952_876.jpg', 'PXL_20210503_091653767.jpg',
'IMG_20210412_071409_739.jpg', 'PXL_20210504_144059912.jpg',
'IMG_20210413_072354_516.jpg', 'PXL_20210508_051236024.jpg',
'IMG_20210414_071207_020.jpg', 'PXL_20220709_052125481.MP.jpg',
'IMG_20210508_071322_569.jpg', 'PXL_20220710_044819946.jpg', 'PXL_20220714_064434190.MP.jpg', install_dir: '/usr/share/images/numeronesoft-backgrounds-cornetti')

