project('numeronesoft-backgrounds-cornetti')
install_data('IMG_20210122_072511.jpg',
'IMG_20210122_072519_652.jpg',
'IMG_20210127_072322_345.jpg',
'IMG_20210129_074513_650.jpg',
'IMG_20210130_065128_584.jpg',
'IMG_20210130_065326_413.jpg',
'IMG_20210130_065446_145.jpg',
'IMG_20210130_113135_644.jpg',
'IMG_20210130_113243_882.jpg',
'IMG_20210201_073734_970.jpg',
'IMG_20210202_071658_450.jpg',
'IMG_20210202_080239_901.jpg',
'IMG_20210203_064510_244.jpg',
'IMG_20210203_072801_004.jpg',
'IMG_20210204_135554_325.jpg',
'IMG_20210205_070657_385.jpg',
'IMG_20210206_121135_789.jpg',
'IMG_20210207_075355_316.jpg',
'IMG_20210209_073033_045.jpg',
'IMG_20210210_070721_946.jpg',
'IMG_20210211_071319_467.jpg',
'IMG_20210212_071033_560.jpg',
'IMG_20210213_072933_251.jpg',
'IMG_20210221_081039_611.jpg',
'IMG_20210222_071743_030.jpg',
'IMG_20210301_072617_124.jpg',
'IMG_20210302_112232_636.jpg',
'IMG_20210303_074110_662.jpg',
'IMG_20210304_113430_477.jpg',
'IMG_20210308_072344_210.jpg',
'IMG_20210311_071400_713.jpg',
'IMG_20210312_072836_002.jpg',
'IMG_20210313_072158_206.jpg',
'IMG_20210314_072732_492.jpg',
'IMG_20210409_071642_793.jpg',
'IMG_20210410_070952_112.jpg',
'IMG_20210411_073952_876.jpg',
'IMG_20210412_071409_739.jpg',
'IMG_20210414_071207_020.jpg',
'IMG_20210508_071322_569.jpg',
'PXL_20210203_054428270.jpg',
'PXL_20210203_062724678.jpg',
'PXL_20210211_061050978.jpg',
'PXL_20210212_060945377.jpg',
'PXL_20210221_070752865.jpg',
'PXL_20210222_061639148.jpg',
'PXL_20210225_095405901.jpg',
'PXL_20210226_103319313.jpg',
'PXL_20210301_062537270.MP.jpg',
'PXL_20210303_064029880.MP.jpg',
'PXL_20210311_061301053.jpg',
'PXL_20210313_062042888.jpg',
'PXL_20210314_062655253.jpg',
'PXL_20210409_051349482.MP.jpg',
'PXL_20210410_050834800.jpg',
'PXL_20210411_053922116.jpg',
'PXL_20210412_051350243.jpg',
'PXL_20210413_052206701.jpg',
'PXL_20210414_050917821.jpg',
'PXL_20210419_092324096.jpg',
'PXL_20210419_170302572.jpg',
'PXL_20210421_085754848.jpg',
'PXL_20210423_101257088.jpg',
'PXL_20210502_104624488.jpg',
'PXL_20210502_104857412.jpg',
'PXL_20210503_091653767.jpg',
'PXL_20210508_051236024.jpg',
'PXL_20220709_052125481.MP.jpg',
'PXL_20220710_044819946.jpg',
'PXL_20220714_064434190.MP.jpg', install_dir: '/usr/share/images/numeronesoft-backgrounds-cornetti')

